Fix some styling issues:  - transitionDelay for shouldUpdateScroll to match with the latest transition delay value  - Remove the borders of input and textarea  - The contact form's width on mobile

--- a/src/scss/pages/contact.module.scss
+++ b/src/scss/pages/contact.module.scss
@@ -1,6 +1,11 @@
 @import '../common/variables';
+@import '../common/mixin';
 
 .contactWrapper {
   width: 80%;
   margin: 0 auto;
+
+  @include max-screen($mobileLandMax) {
+    width: 100%;
+  }
 }
